Added bills endpoint
